Fixed Word Wrapping on Searchbar Homepage
word-wrap: break-word was applied universally across the page, thus I added an !important clause for white-space: nowrap, to counteract this on the homepage search bar

--- a/src/styles/Splash.module.css
+++ b/src/styles/Splash.module.css
@@ -116,11 +116,7 @@
   color: black !important;
 }
 
-.offCampusButton .pressed {
-  box-shadow: none !important;
-}
-
-.onCampusButton .pressed {
+.onCampusButton .pressed, .offCampusButton .pressed {
   box-shadow: -5px 0 10px rgba(0, 0, 0, 1);
 }
 
@@ -148,6 +144,7 @@
   cursor: pointer;
   transition: background-color 0.3s;
   margin: 0;
+  white-space: nowrap !important;
 }
 
 .onCampusButton:hover,
